# pointcloud-fusion

./: CMakeLists.txt  LICENSE  README.md  package.xml
cfg/: fusion.cfg
cfg/extrinsics/: stereo_Seikowave_extrinsics.yaml  stereo_extrinsics.yaml
cfg/extrinsics/nbl_calibration/: 1.yaml  2.yaml  3.yaml  4.yaml
cfg/extrinsics/old_extrinsics/: stereo_Seikowave_extrinsics_nbl2.yaml  stereo_Seikowave_extrinsics_old1.yaml
launch/: fusion_standalone.launch  pcl_filter.launch  sensor_fusion.launch
src/: pointcloudFusion.cpp  pointcloudFusion.h  pointcloudIcp.cpp  pointcloudIcp.h
